<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.nnu.mp.currencyconverter.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_amount_convert"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_amount"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/default_amount"
        />

    <Spinner
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/sp_from"
        android:gravity="right"
        android:layout_below="@+id/et_amount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_swap"
        android:contentDescription="@string/swap"
        android:src="@mipmap/ic_swap_horiz_white_2x"
        android:background="@color/colorAccent"
        android:padding="2dp"
        android:layout_alignTop="@+id/sp_from"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/sp_to"
        android:layout_alignTop="@+id/btn_swap"
        android:layout_toRightOf="@+id/btn_swap"
      />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tv_convertedAmt"
        android:textColor="#ff50c9ac"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_alignTop="@+id/btn_convert"
        android:layout_below="@+id/sp_from"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/lv_history"
        android:layout_toLeftOf="@+id/sp_to"
        android:layout_toStartOf="@+id/sp_to" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/btn_convert"
        android:layout_below="@+id/sp_to"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="left"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_history"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_convert"
        android:isScrollContainer="true"
        android:layout_alignParentBottom="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_times_created"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/created_tv"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_times_resumed"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/lv_history"
        android:layout_alignRight="@+id/lv_history"
        android:layout_alignEnd="@+id/lv_history" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/resumed_tv"
        android:layout_alignTop="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lv_history"
        android:layout_alignParentRight="true"/>



</RelativeLayout>
